--- a/solidare/portal/templates/lista_avisos.html
+++ b/solidare/portal/templates/lista_avisos.html
@@ -90,4 +90,24 @@
         <p class="sem-avisos">Nenhum aviso disponível no momento.</p>
     {% endif %}
 </div>
+
+    {% if request.user.is_authenticated %}
+    {% if request.user.professor %}
+            <button onclick="window.location.href='/professor/'" 
+                style="position: absolute; top: 20px; left: 20px; 
+                    padding: 10px 20px; font-size: 16px; 
+                    background-color: #f0f0f0; border: 1px solid #ccc; 
+                    border-radius: 5px; cursor: pointer;">
+                ⬅ Voltar
+            </button>
+    {% else %}
+            <button onclick="window.location.href='/aluno/'" 
+                style="position: absolute; top: 20px; left: 20px; 
+                    padding: 10px 20px; font-size: 16px; 
+                    background-color: #f0f0f0; border: 1px solid #ccc; 
+                    border-radius: 5px; cursor: pointer;">
+                ⬅ Voltar
+            </button>
+        {% endif %}
+    {% endif %}
 {% endblock %}
