--- a/solidare/portal/templates/base.html
+++ b/solidare/portal/templates/base.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 {% load static %}
- <html lang="pt-br">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>{% block title %}Meu Site{% endblock %}</title>
- </head>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Meu Site{% endblock %}</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="{% static 'portal/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'portal/img/logo.png' %}">
-    <body>
-        <div class="container">
-            {% block content %}{% endblock %}
-        </div>
-    </body>
- </html>
+
+    {% block style %}{% endblock %}
+</head>
+<body>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+</body>
+</html>
