--- a/solidare/portal/templates/professor.html
+++ b/solidare/portal/templates/professor.html
@@ -131,6 +131,7 @@
       <button onclick="window.location.href='/candidatos/'">Candidatos</button>
       <button onclick="window.location.href='/avisos/'">Avisos</button>
       <button onclick="window.location.href='/turmas/professor/'">Gerenciar Turmas</button>
+      <button onclick="window.location.href='/turmas/listar/'">Lista de Presença</button>
       <button onclick="window.location.href='/calendario/'">Calendário</button>
       <button onclick="window.location.href='/chat/professor/'" class="chat-btn">
           Chat com Alunos
