--- a/solidare/portal/templates/chat_aluno.html
+++ b/solidare/portal/templates/chat_aluno.html
@@ -81,7 +81,7 @@
     }
 </style>
 
-<button onclick="history.back()" class="back-button">⬅</button>
+<a href="{% url 'pagina_aluno' %}" class="back-button">⬅</a>
 
 <div class="chat-container">
     <div class="chat-header">
