--- a/solidare/portal/templates/listar_turmas.html
+++ b/solidare/portal/templates/listar_turmas.html
@@ -14,13 +14,20 @@
     }
 
     .header {
-    background-color: #ce2c25; /* vermelho */
+    background-color: #ce2c25;
     color: white;
     padding: 1rem 1.5rem;
     display: flex;
     align-items: center;
     gap: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+    width: 100vw;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     }
 
     .btn-voltar {
@@ -48,9 +55,9 @@
     }
 
     .container {
-        max-width: 900px;
-        margin: 30px auto;
-        padding: 0 20px;
+    max-width: 900px;
+    margin: 100px auto 30px auto; 
+    padding: 0 20px;
     }
 
     h1 {
