separando telas de avisos

--- a/solidare/portal/templates/aluno.html
+++ b/solidare/portal/templates/aluno.html
@@ -129,7 +129,7 @@
       <h3>Menu</h3>
       <button onclick="window.location.href='/turmas/aluno/'">Minhas Turmas</button>
       <button onclick="window.location.href='/calendario/'">Calendário</button>
-      <button onclick="window.location.href='/avisos/'">Avisos</button>
+      <button onclick="window.location.href='/avisosA/'">Avisos</button>
       <button onclick="window.location.href='/chat/aluno/'">Chat</button>
       <button onclick="window.location.href='/horario/'">Horário</button>
     </div>
