ajustando tela de avisos

--- a/solidare/portal/templates/criar_aviso.html
+++ b/solidare/portal/templates/criar_aviso.html
@@ -89,7 +89,7 @@
     }
 </style>
 
-<a href="{% url 'lista_avisos' %}" class="back-button">⬅</a>
+<a href="{% url 'lista_avisos_prof' %}" class="back-button">⬅</a>
 
 <div class="aviso-container">
     <h2 class="page-title">Criar Novo Aviso</h2>
